fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,34 @@
     align-items: center;
     margin: 5%;
     align-content: center;
-    flex-wrap: wrap;
 }
 @media only screen and (max-width:600px){
     .centerFlex {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 5%;
+        align-content: space-around;
+        overflow-wrap: normal;
+    }
+}
+
+@media only screen and (min-width:600px) {
+    .centerFlex {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 5%;
+        align-content: space-around;
+        overflow-wrap: normal;
+    }
+}
+
+@media only screen and (max-width:600px) {
+    .centerFlexWrap {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -64,7 +88,7 @@
 }
 
 @media only screen and (min-width:600px) {
-    .centerFlex {
+    .centerFlexWrap {
         width: 100%;
         display: flex;
         flex-direction: row;
